fix(button toolbar): align buttons to the right in the toolbar
fix #1852

--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,7 @@ code {
   padding: 0;
   background-color: white;
 }
+
+.button-toolbar > button {
+	margin-left: .5rem;
+}
